# pdf-rag-qa-system

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: api_requests.py  chat.py  constants.py  documents.py  main.py
app/api/: routes.py
app/core/: __init__.py  constants.py  models.py  settings.py
app/domain/: __init__.py  documents.py  models.py  question_service.py
app/infrastructure/: __init__.py  language_models.py  models.py  vector_db.py
notebooks/: experiments.ipynb
source/: main.py
source/api/: routes.py
source/core/: constants.py  settings.py
source/domain/: __init__.py  documents.py  question_service.py
source/infrastructure/: __init__.py  language_models.py  vector_db.py
