[project]
name = "challenge-tractian"
version = "0.1.0"
description = "This application allows you to upload PDF documents, index their contents, and interactively ask questions based on the indexed information using a chatbot interface." 
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.4",
    "fastapi[uvicorn]>=0.121.3",
    "langchain>=1.0.7",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.8.0",
    "pdfplumber>=0.11.8",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "streamlit>=1.51.0",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[tool.ruff]
exclude = [
    "notebooks",
]

[tool.ruff.lint]
select = [
    "FAST",
    "F",   
    "E", 
    "W",    
    "I",         
    "UP",        
    "B",         
    "A", 
    "C4", 
    "SIM",
    "DOC",
]
